src/containers/artwork/style.scss
.artwork-outer {
    margin-top: auto;
    flex: 0 0 $sidebar-width;
    justify-self: flex-end;
    position: relative;
    overflow: hidden;

    .artwork {
        display: flex;
        align-items: flex-end;
        justify-content: center;
    
        &.loading {
            height: 100%;
            align-items: center;

            .artwork-image {
                opacity: 0;
            }

            @include loading-indicator(30%);
            &::after {
                position: absolute;
            }
        }

        &.inactive {
            height: 100%;
            align-items: center;

            &::after {
                display: flex;
                align-items: center;
                justify-content: center;
                width: 80%;
                height: 80%;
                content: 'Artwork';
                color: $color-medium-very-light;
                font-weight: bold;
                font-size: 2.5em;
                border: 8px dashed $color-medium-very-light;
                border-radius: 32px;
            }
        }
    }
    .artwork-image {
        max-width: $sidebar-width;
        max-height: $sidebar-width;
        
        opacity: 1;
        transition: opacity 0.15s ease-in-out;
    }

}

